' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Prbleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "Film" {
  * id: integer <<generated>>
  --
  * version: integer
  * titel: text
  * laenge: number
  * rating: number
  * filmart: text
  * preis: number
  * rabatt: number
  * streambar: boolean
    erscheinungsdatum: date 
    schlagwoerter: text
  * erzeugt: timestamp
  * aktualisiert: timestamp
  * **distributor_id**: integer <<FK>>
}

entity "Distributor" {
  * id: integer <<generated>>
  --
  * name: text
    umsatz: number
    homepage: text
}

entity "Schauspieler" {
  * id: integer <<generated>>
  --
  * name: text
    geburtsdatum: date
  * **film_id**: integer <<FK>>
}

Film ||..|| Distributor
Film ||..o{ Schauspieler


@enduml
